--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <p>Hier Text</p>
     <h2>Hallpo</h2>
     <H1>Willkommen Konflikt</H1>
    
