--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <h2>Hallpo</h2>
+    <h2>Ich bin Paco</h2>
     <H1>Willkommen Konflikt</H1>
    
     <div id="root"></div>
